--- a/src/elements/Typography/typographyStyles.module.sass
+++ b/src/elements/Typography/typographyStyles.module.sass
@@ -53,3 +53,14 @@
   font-weight: 400
   line-height: 1.6em
   color: #BDC0C2
+
+@media   ( max-width: 495px  )
+  .h1
+    font-size: 5em
+    padding-left: 25px
+
+  .h2
+    font-size: 3.25em
+
+  .h3
+    font-size: 2.75em
