padding adaptive fixed

--- a/src/elements/Case/CaseStyles.module.sass
+++ b/src/elements/Case/CaseStyles.module.sass
@@ -26,6 +26,9 @@
   padding-bottom: 50px
 
 @media (max-width: 480px)
+  .case
+    padding-bottom: 75px
+
   .case_inner
     flex-direction: column-reverse
     gap: 40px
