--- a/src/elements/Immerse/ImmerseStyles.module.sass
+++ b/src/elements/Immerse/ImmerseStyles.module.sass
@@ -51,6 +51,9 @@
   width: 100%
 
 @media (max-width: 579px)
+  .immerse
+    padding-bottom: 65px
+
   .immerse_inner
     flex-direction: column
     align-items: unset
