--- a/src/elements/Intro/IntroStyles.module.sass
+++ b/src/elements/Intro/IntroStyles.module.sass
@@ -33,6 +33,9 @@
   padding-right: 14px
 
 @media (max-width: 819px)
+  .intro
+    padding-bottom: 65px
+
   .intro_inner
     flex-direction: row-reverse
 
