--- a/src/elements/Products/ProductsStyles.module.sass
+++ b/src/elements/Products/ProductsStyles.module.sass
@@ -16,6 +16,9 @@
   grid-row-gap: 80px
 
 @media (max-width: 655px)
+  .products
+    padding-bottom: 75px
+
   .products_list
     align-items: center
     display: flex
