--- a/src/elements/Specs/SpecsStyles.module.sass
+++ b/src/elements/Specs/SpecsStyles.module.sass
@@ -25,6 +25,9 @@
   width: 100%
 
 @media (max-width: 499px)
+  .specs
+    padding-bottom: 80px
+
   .inner_content
     display: flex
     flex-direction: column
