--- a/src/features/ProductCards/ProductCardsStyles.module.sass
+++ b/src/features/ProductCards/ProductCardsStyles.module.sass
@@ -9,8 +9,13 @@
   width: 100%
   height: 152px
   padding: 13px 20px
+  &:hover .content_img
+    transform: scale(1.1)
+    top: -30%
+    left: 23%
 
 .content_img
+  transition: all 0.5s ease
   position: absolute
   top: 10%
   transform: translate(-50%, -50%)
